Continue work on C++ conversion.
The server now has multithreading and spools up a primitive photophile. Also,
the taxidermist has been renamed to photophile.

--- a/ShapeSifter.vcxproj
+++ b/ShapeSifter.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\common\ss_classes.cpp" />
+    <ClCompile Include="src\photophile\photophile.cpp" />
     <ClCompile Include="src\server\server.cpp" />
   </ItemGroup>
   <ItemGroup>
