Began work on populating the UI with the contetns of the part table. Still needs to have the QTimer fixed.

--- a/ShapeSifter.vcxproj
+++ b/ShapeSifter.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="src\photophile\photophile.cpp" />
     <ClCompile Include="src\server\server.cpp" />
     <ClCompile Include="src\suip\suipClient.cpp" />
+    <ClCompile Include="src\suip\suipUI.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\common\ss_classes.h" />
