--- a/ShapeSifter.vcxproj.filters
+++ b/ShapeSifter.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\suip\suipClient.cpp">
       <Filter>Source Files\SUIP</Filter>
     </ClCompile>
+    <ClCompile Include="src\suip\suipUI.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\server\server.h">
