Added classifist simulator and a skeleton BB Interface

--- a/The Shape Sifter.vcxproj
+++ b/The Shape Sifter.vcxproj
@@ -121,6 +121,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\belt_buckle_interface\BeltBuckle.cpp" />
+    <ClCompile Include="src\classifist\Classifist.cpp" />
     <ClCompile Include="src\common\ss_classes.cpp" />
     <ClCompile Include="src\mt_mind\mt_mind.cpp" />
     <ClCompile Include="src\photophile\photophile.cpp" />
@@ -129,6 +131,8 @@
     <ClCompile Include="src\suip\suip.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\belt_buckle_interface\BeltBuckle.h" />
+    <ClInclude Include="src\classifist\Classifist.h" />
     <ClInclude Include="src\common\ss_classes.h" />
     <ClInclude Include="src\mt_mind\mt_mind.h" />
     <ClInclude Include="src\photophile\photophile.h" />
