Implement protoype of brixit service for manual image classification

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ include_large_libs/*/
 *.pdb
 *.dll
 *.log
+
+py_venv/
+
+*.pyc
+__pycache__/
+
+instance/
+
+.pytest_cache/
+.coverage
+htmlcov/
+
+dist/
+build/
+*.egg-info/
+*.sqlite
