Add FileWriter class

--- a/The Shape Sifter.vcxproj
+++ b/The Shape Sifter.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="src\belt_buckle_interface\BeltBuckle.cpp" />
     <ClCompile Include="src\classifist\Classifist.cpp" />
     <ClCompile Include="src\common\ss_classes.cpp" />
+    <ClCompile Include="src\FileWriter\FileWriter.cpp" />
     <ClCompile Include="src\mt_mind\mt_mind.cpp" />
     <ClCompile Include="src\photophile\photophile.cpp" />
     <ClCompile Include="src\server\main.cpp" />
@@ -136,6 +137,7 @@
     <ClInclude Include="src\classifist\Classifist.h" />
     <ClInclude Include="src\common\bb_utils.h" />
     <ClInclude Include="src\common\ss_classes.h" />
+    <ClInclude Include="src\FileWriter\FileWriter.h" />
     <ClInclude Include="src\mt_mind\mt_mind.h" />
     <ClInclude Include="src\photophile\photophile.h" />
     <ClInclude Include="src\server\server.h" />
