Work on File Writer module

--- a/The Shape Sifter.vcxproj
+++ b/The Shape Sifter.vcxproj
@@ -82,12 +82,12 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
-    <QtInstall>msvc2019_64</QtInstall>
+    <QtInstall>5.12.11_msvc2017_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
-    <QtInstall>msvc2019_64</QtInstall>
+    <QtInstall>5.12.11_msvc2017_64</QtInstall>
     <QtModules>core;gui;widgets</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
@@ -121,7 +121,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="include\RS-232\rs232.c" />
+    <ClCompile Include="include\RS232\rs232.c" />
     <ClCompile Include="src\belt_buckle_interface\BeltBuckle.cpp" />
     <ClCompile Include="src\classifist\Classifist.cpp" />
     <ClCompile Include="src\common\ss_classes.cpp" />
