--- a/The Shape Sifter.vcxproj
+++ b/The Shape Sifter.vcxproj
@@ -88,12 +88,11 @@
     <PostBuildEvent>
       <Message>Copying OpenCV and QT dlls</Message>
       <Command>
-		copy "$(OPENCV_DIR)\build\x64\vc15\bin\opencv_world450d.pdb" "$(SolutionDir)out\$(Configuration)\opencv_world450.pdb"
-		copy "$(OPENCV_DIR)\build\x64\vc15\bin\opencv_world450d.dll" "$(SolutionDir)out\$(Configuration)\opencv_world450.dll"
+		copy "$(OPENCV_DIR)\build\x64\vc15\bin\opencv_world450.dll" "$(SolutionDir)out\$(Configuration)\opencv_world450.dll"
 		copy "$(OPENCV_DIR)\build\x64\vc15\bin\opencv_videoio_ffmpeg450_64.dll" "$(SolutionDir)out\$(Configuration)\opencv_videoio_ffmpeg450_64.dll"
-		copy "$(QT_DIR)\bin\QT5Widgetsd.dll" "$(SolutionDir)out\$(Configuration)\QT5Widgets.dll"
-		copy "$(QT_DIR)\bin\QT5Guid.dll" "$(SolutionDir)out\$(Configuration)\QT5Gui.dll"
-		copy "$(QT_DIR)\bin\QT5Cored.dll" "$(SolutionDir)out\$(Configuration)\QT5Core.dll"
+		copy "$(QT_DIR)\bin\QT5Widgets.dll" "$(SolutionDir)out\$(Configuration)\QT5Widgets.dll"
+		copy "$(QT_DIR)\bin\QT5Gui.dll" "$(SolutionDir)out\$(Configuration)\QT5Gui.dll"
+		copy "$(QT_DIR)\bin\QT5Core.dll" "$(SolutionDir)out\$(Configuration)\QT5Core.dll"
 	  </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
